co2 sensor integated

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,6 +24,11 @@ lib_deps =
     https://github.com/sstaub/NTP
     PubSubClient
     https://github.com/Seeed-Studio/Seeed_Arduino_LIS3DHTR
-build_flags = 
+    https://github.com/Seeed-Studio/Seeed_SCD30
+    https://github.com/Seeed-Studio/Seeed_Arduino_Linechart
+build_flags =
     -DAZ_NO_LOGGING 
 #    -DEZTIME_CACHE_EEPROM=0
+    -std=gnu++14
+
+build_unflags = -std=gnu++11
